--- a/app/src/main/resources/static/register/QnQ-doc.html
+++ b/app/src/main/resources/static/register/QnQ-doc.html
@@ -143,12 +143,6 @@
 
   <div class="pagetitle">
     <h1>QnA</h1>
-    <nav>
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-        <li class="breadcrumb-item">QnA</li>
-      </ol>
-    </nav>
   </div><!-- End Page Title -->
 
   <section class="section">
@@ -251,6 +245,13 @@
             border-radius: 10px;
           }
       </style>
+
+      <div class="chat-cover">
+        <div class="chats scroll">
+          <ul class="chat-list">
+
+          </ul>
+        </div>
         <div class="chat-send-cover">
           <div class="input-group mb-3">
             <input type="text" class="form-control chat-text" placeholder="문의 사항을 입력해주세요"
