--- a/app/src/main/resources/static/register/AnA-admin.html
+++ b/app/src/main/resources/static/register/AnA-admin.html
@@ -242,15 +242,17 @@
               border-radius: 10px;
             }
         </style>
+
         <div class="chat-cover">
           <div class="chats scroll">
             <ul class="chat-list">
 
             </ul>
           </div>
+
           <div class="chat-send-cover">
             <div class="input-group mb-3">
-              <input type="text" class="form-control chat-text" placeholder="답변 입력하기" aria-label="Recipient's username" aria-describedby="button-addon2">
+              <input type="text" class="form-control chat-text" placeholder="답변을 입력해 주세요" aria-label="Recipient's username" aria-describedby="button-addon2">
               <button class="btn btn-outline-secondary chat-btn" type="button" id="button-addon2">입력</button>
             </div>
           </div>
