--- a/app/src/main/resources/static/register/AnA-admin.html
+++ b/app/src/main/resources/static/register/AnA-admin.html
@@ -53,8 +53,9 @@
             <div id="pre-userimg"></div>
             <img
               id="userimg"
-              src="assets/img/profile-img.jpg"
+              src="assets/img/default_profile.png"
               alt="Profile"
+              class="rounded-circle"
             />
             <span id="username" class="d-none d-md-block ps-2"></span>
           </a>
