--- a/app/src/main/resources/static/register/boardEditor.html
+++ b/app/src/main/resources/static/register/boardEditor.html
@@ -219,14 +219,14 @@
     <ul class="d-flex align-items-center">
       <li class="nav-item dropdown pe-3">
         <a
-          class="nav-link nav-profile d-flex align-items-center pe-0"
-          
+          class="nav-link nav-profile d-flex align-items-center pe-0"           
         >
           <div id="pre-userimg"></div>
           <img
             id="userimg"
-            src="assets/img/profile-img.jpg"
+            src="assets/img/default_profile.png"
             alt="Profile"
+            class="rounded-circle"
           />
           <span id="username" class="d-none d-md-block ps-2"></span>
         </a>
