--- a/app/src/main/resources/static/register/patients-profile.html
+++ b/app/src/main/resources/static/register/patients-profile.html
@@ -79,11 +79,6 @@
               href="patients-profile.html"
             >
               <div id="pre-userimg"></div>
-              <img
-                id="userimg"
-                src="assets/img/profile-img.jpg"
-                alt="Profile"
-              />
               <span id="username" class="d-none d-md-block ps-2"></span>
             </a>
           </li>
@@ -95,7 +90,6 @@
     <!-- ======= Sidebar ======= -->
     <aside id="sidebar" class="sidebar">
       <ul class="sidebar-nav" id="sidebar-nav">
-
         <li class="nav-item">
           <a class="nav-link collapsed" href="index.html">
             <i class="bi bi-grid"></i>
@@ -154,9 +148,10 @@
           });
         </script>
       </ul>
-      <img src="../register/assets/img/mainlogo.png" style="height:150px; margin-top:400px; margin-left:40px;">
-      
-      
+      <img
+        src="../register/assets/img/mainlogo.png"
+        style="height: 150px; margin-top: 400px; margin-left: 40px"
+      />
     </aside>
     <!-- End Sidebar-->
 
@@ -173,9 +168,13 @@
               <div
                 class="card-body profile-card pt-4 d-flex flex-column align-items-center"
               >
-              <div id="preview-container">
-                <img id="preview-img" class="doctors-img" src="../assets/img/default_profile.png" />
-              </div>
+                <div id="preview-container">
+                  <img
+                    id="preview-img"
+                    class="doctors-img"
+                    src="../assets/img/default_profile.png"
+                  />
+                </div>
                 <h2 class="top-name">엄 진 영</h2>
               </div>
             </div>
@@ -535,33 +534,62 @@
     <footer id="footer" class="footer">
       <div>
         <div class="tooltip-container">
-          <a href="https://github.com/whtmdgus" data-bs-toggle="tooltip" data-bs-placement="top" title="조승현">
-            <img src="../register/assets/img/gitlogo.png" style="width:40px">
+          <a
+            href="https://github.com/whtmdgus"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="조승현"
+          >
+            <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
           </a>
-          <a href="https://github.com/chaminju927" data-bs-toggle="tooltip" data-bs-placement="top" title="차민주">
-            <img src="../register/assets/img/gitlogo.png" style="width:40px">
+          <a
+            href="https://github.com/chaminju927"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="차민주"
+          >
+            <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
           </a>
-          <a href="https://github.com/molang2" data-bs-toggle="tooltip" data-bs-placement="top" title="이준영">
-            <img src="../register/assets/img/gitlogo.png" style="width:40px">
+          <a
+            href="https://github.com/molang2"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="이준영"
+          >
+            <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
           </a>
-          <a href="https://github.com/hyunwookimkim" data-bs-toggle="tooltip" data-bs-placement="top" title="김현우">
-            <img src="../register/assets/img/gitlogo.png" style="width:40px">
+          <a
+            href="https://github.com/hyunwookimkim"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="김현우"
+          >
+            <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
           </a>
-          <a href="https://github.com/omelase" data-bs-toggle="tooltip" data-bs-placement="top" title="이예찬">
-            <img src="../register/assets/img/gitlogo.png" style="width:40px">
+          <a
+            href="https://github.com/omelase"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="이예찬"
+          >
+            <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
           </a>
         </div>
-  
+
         <div class="footer-img-container">
-          <img src="../register/assets/img/bitcamplogo.png">
-          <img src="../register/assets/img/navercloudlogo.png" style="width:200px; margin-left: 50px;">
-          <img src="../register/assets/img/magicecole.png" style="width:150px; margin-left: 50px;">
+          <img src="../register/assets/img/bitcamplogo.png" />
+          <img
+            src="../register/assets/img/navercloudlogo.png"
+            style="width: 200px; margin-left: 50px"
+          />
+          <img
+            src="../register/assets/img/magicecole.png"
+            style="width: 150px; margin-left: 50px"
+          />
         </div>
-  
       </div>
-  
-  
-    </footer><!-- End Footer -->
+    </footer>
+    <!-- End Footer -->
 
     <a
       href="#"
