--- a/app/src/main/resources/static/register/patients-records.html
+++ b/app/src/main/resources/static/register/patients-records.html
@@ -65,11 +65,6 @@
               href="patients-profile.html"
             >
               <div id="pre-userimg"></div>
-              <img
-                id="userimg"
-                src="assets/img/profile-img.jpg"
-                alt="Profile"
-              />
               <span id="username" class="d-none d-md-block ps-2"></span>
             </a>
           </li>
@@ -77,19 +72,18 @@
       </nav>
     </header>
     <!-- ======= Header ======= -->
-     <!-- ======= Sidebar ======= -->
-     <aside id="sidebar" class="sidebar">
+    <!-- ======= Sidebar ======= -->
+    <aside id="sidebar" class="sidebar">
       <ul class="sidebar-nav" id="sidebar-nav">
-  
         <li class="nav-item">
           <a class="nav-link collapsed" href="index.html">
             <i class="bi bi-grid"></i>
             <span>Main</span>
           </a>
         </li>
-  
+
         <li class="nav-heading">환자 페이지</li>
-  
+
         <li class="nav-item">
           <a class="nav-link" href="patients-profile.html">
             <i class="bi bi-person"></i>
@@ -97,21 +91,21 @@
           </a>
         </li>
         <!-- End Profile Page Nav -->
-  
+
         <li class="nav-item">
           <a class="nav-link collapsed" href="patients-records.html">
             <i class="bi bi-file-earmark"></i>
             <span>작성글 목록</span>
           </a>
         </li>
-  
+
         <li class="nav-item">
           <a class="nav-link collapsed" href="QnQ.html">
             <i class="bi bi-question-circle"></i>
             <span>문의하기</span>
           </a>
         </li>
-  
+
         <!-- 로그아웃 태그 -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
         <li class="nav-item logout">
@@ -139,7 +133,10 @@
           });
         </script>
       </ul>
-      <img src="../register/assets/img/mainlogo.png" style="height:150px; margin-top:400px; margin-left:40px;">
+      <img
+        src="../register/assets/img/mainlogo.png"
+        style="height: 150px; margin-top: 400px; margin-left: 40px"
+      />
     </aside>
     <!-- End Sidebar-->
     <main id="main" class="main">
@@ -231,33 +228,65 @@
     </main>
     <!-- End #main -->
 
-     <!-- ======= Footer ======= -->
-  <footer id="footer" class="footer">
-    <div >
-     <div class="tooltip-container">
-        <a href="https://github.com/whtmdgus" data-bs-toggle="tooltip" data-bs-placement="top" title="조승현">
-          <img src="../register/assets/img/gitlogo.png" style="width:40px">
-        </a>
-        <a href="https://github.com/chaminju927" data-bs-toggle="tooltip" data-bs-placement="top" title="차민주">
-          <img src="../register/assets/img/gitlogo.png" style="width:40px">
-        </a>
-        <a href="https://github.com/molang2" data-bs-toggle="tooltip" data-bs-placement="top" title="이준영">
-          <img src="../register/assets/img/gitlogo.png" style="width:40px">
-        </a>
-        <a href="https://github.com/hyunwookimkim" data-bs-toggle="tooltip" data-bs-placement="top" title="김현우">
-          <img src="../register/assets/img/gitlogo.png" style="width:40px">
-        </a>
-        <a href="https://github.com/omelase" data-bs-toggle="tooltip" data-bs-placement="top" title="이예찬">
-          <img src="../register/assets/img/gitlogo.png" style="width:40px">
-        </a>
-     </div>
-     <div class="footer-img-container">
-       <img src ="../register/assets/img/bitcamplogo.png" > 
-       <img src ="../register/assets/img/navercloudlogo.png" style="width:200px; margin-left: 50px;"> 
-       <img src ="../register/assets/img/magicecole.png" style="width:150px; margin-left: 50px;">
+    <!-- ======= Footer ======= -->
+    <footer id="footer" class="footer">
+      <div>
+        <div class="tooltip-container">
+          <a
+            href="https://github.com/whtmdgus"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="조승현"
+          >
+            <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
+          </a>
+          <a
+            href="https://github.com/chaminju927"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="차민주"
+          >
+            <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
+          </a>
+          <a
+            href="https://github.com/molang2"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="이준영"
+          >
+            <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
+          </a>
+          <a
+            href="https://github.com/hyunwookimkim"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="김현우"
+          >
+            <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
+          </a>
+          <a
+            href="https://github.com/omelase"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="이예찬"
+          >
+            <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
+          </a>
+        </div>
+        <div class="footer-img-container">
+          <img src="../register/assets/img/bitcamplogo.png" />
+          <img
+            src="../register/assets/img/navercloudlogo.png"
+            style="width: 200px; margin-left: 50px"
+          />
+          <img
+            src="../register/assets/img/magicecole.png"
+            style="width: 150px; margin-left: 50px"
+          />
+        </div>
       </div>
-    </div>
-      </footer><!-- End Footer -->
+    </footer>
+    <!-- End Footer -->
 
     <a
       href="#"
