--- a/app/src/main/resources/static/register/AnA-list.html
+++ b/app/src/main/resources/static/register/AnA-list.html
@@ -174,13 +174,14 @@
               /* 파이어폭스 */
             }
 
-            .chat-cover {
-              width: 780px;
-              height: 750px;
-              margin-left: auto;
-              margin-right: auto;
-              box-sizing: border-box;
-            }
+           
+        .chat-cover {
+          width: 780px;
+          height: 750px;
+          box-sizing: border-box;
+          margin: 100px auto;
+         
+        }
 
             .chats {
               width: 100%;
