--- a/app/src/main/resources/static/register/AnA.html
+++ b/app/src/main/resources/static/register/AnA.html
@@ -156,17 +156,36 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
-    <div class="copyright">
-      &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
+    <div>
+      <div class="tooltip-container">
+        <a href="https://github.com/whtmdgus" data-bs-toggle="tooltip" data-bs-placement="top" title="조승현">
+          <img src="../register/assets/img/gitlogo.png" style="width:40px">
+        </a>
+        <a href="https://github.com/chaminju927" data-bs-toggle="tooltip" data-bs-placement="top" title="차민주">
+          <img src="../register/assets/img/gitlogo.png" style="width:40px">
+        </a>
+        <a href="https://github.com/molang2" data-bs-toggle="tooltip" data-bs-placement="top" title="이준영">
+          <img src="../register/assets/img/gitlogo.png" style="width:40px">
+        </a>
+        <a href="https://github.com/hyunwookimkim" data-bs-toggle="tooltip" data-bs-placement="top" title="김현우">
+          <img src="../register/assets/img/gitlogo.png" style="width:40px">
+        </a>
+        <a href="https://github.com/omelase" data-bs-toggle="tooltip" data-bs-placement="top" title="이예찬">
+          <img src="../register/assets/img/gitlogo.png" style="width:40px">
+        </a>
+      </div>
+
+      <div class="footer-img-container">
+        <img src="../register/assets/img/bitcamplogo.png">
+        <img src="../register/assets/img/navercloudlogo.png" style="width:200px; margin-left: 50px;">
+        <img src="../register/assets/img/magicecole.png" style="width:150px; margin-left: 50px;">
+      </div>
+
     </div>
-    <div class="credits">
-      <!-- All the links in the footer should remain intact. -->
-      <!-- You can delete the links only if you purchased the pro version. -->
-      <!-- Licensing information: https://bootstrapmade.com/license/ -->
-      <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-    </div>
+
+
   </footer><!-- End Footer -->
+
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
