--- a/app/src/main/resources/static/register/patients-profile.html
+++ b/app/src/main/resources/static/register/patients-profile.html
@@ -171,7 +171,7 @@
                 <div id="preview-container">
                   <img
                     id="preview-img"
-                    class="doctors-img"
+                    class="patients-img"
                     src="../assets/img/default_profile.png"
                   />
                 </div>
