--- a/app/src/main/resources/static/register/memberEditor.html
+++ b/app/src/main/resources/static/register/memberEditor.html
@@ -167,7 +167,7 @@
 
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">환자 회원 조회</h5>
+              <h5 class="card-title"><strong>환자 회원 조회</strong></h5>
 
               <!-- Table with stripped rows -->
               <table class="table table-striped">
@@ -200,7 +200,7 @@
 
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">의사 회원 조회</h5>
+              <h5 class="card-title"><strong>의사 회원 조회</strong></h5>
 
               <!-- Table with stripped rows -->
               <table class="table table-striped">
