환자 프로필 기본이미지 적용

--- a/app/src/main/resources/static/register/patients-profile.html
+++ b/app/src/main/resources/static/register/patients-profile.html
@@ -169,6 +169,7 @@
                 class="card-body profile-card pt-4 d-flex flex-column align-items-center"
               >
                 <div id="preview-container">
+                  <img id="preview-img" class="patients-img" src="../assets/img/default_profile.png" />
                 </div>
                 <h2 class="top-name">엄 진 영</h2>
               </div>
