04월 25일 작업 내용 업로드

--- a/app/src/main/resources/static/auth/doctors-login.html
+++ b/app/src/main/resources/static/auth/doctors-login.html
@@ -174,7 +174,12 @@
           if (result.status == 'success') {
             location.href = '../register/doctors-advices.html';
           } else {
-            alert('로그인 실패!');
+            
+            if(result.data != null) {
+              alert('자격증 인증 안됨');
+            }else {
+              alert('로그인 실패!');
+            }
             document.querySelector('input[name="id"]').value = "";
             document.querySelector('input[name="password"]').value = "";
           }
