04월 25일 작업 내용 업로드

--- a/app/src/main/resources/static/register/hospitals-view.html
+++ b/app/src/main/resources/static/register/hospitals-view.html
@@ -738,8 +738,9 @@
             if (new URL(location.href).searchParams.get("no") == null) {
               if (user.hosNo == 0) {
                 location.href = "doctors-profile.html";
+              }else {
+                location.href = `?no=${user.hosNo}`;
               }
-              location.href = `?no=${user.hosNo}`;
             }
           } else {
             console.log(user.hosName);
