--- a/app/src/main/resources/static/register/hospitals-view.html
+++ b/app/src/main/resources/static/register/hospitals-view.html
@@ -737,7 +737,7 @@
             myno = user.no;
             if (new URL(location.href).searchParams.get("no") == null) {
               if (user.hosNo == 0) {
-                location.href = "doctors-profile.html";
+                location.href = "doctors-advices.html";
               }else {
                 location.href = `?no=${user.hosNo}`;
               }
