--- a/app/src/main/resources/static/register/AnA-admin.html
+++ b/app/src/main/resources/static/register/AnA-admin.html
@@ -173,14 +173,14 @@
             margin-bottom: 2%;
             overflow: auto;
             border-radius: 10px;
-            background-color: navajowhite;
+            background-color:rgb(211, 235, 244);
           }
 
           .chat-list {
             width: 100%;
             padding: 0;
             margin: 0;
-            border: 10px solid navajowhite;
+            border: 10px solid rgb(211, 235, 244);
             box-sizing: border-box;
           }
 
@@ -197,7 +197,7 @@
             width: 300px;
             float: left;
             background-color: white;
-            border: 3px solid rgb(238, 194, 128)
+            border: 3px solid rgb(211, 235, 244);
           }
           .chat-right {}
 
@@ -205,7 +205,7 @@
            width: 300px;
 		        float: right;
 		        background-color: white;
-		        border: 3px solid rgb(238, 194, 128)
+		        border: 3px solid rgb(211, 235, 244);
 		      }
 		      #q-content{
 		        font-weight: bolder;
