--- a/app/src/main/resources/static/register/QnQ-doc.html
+++ b/app/src/main/resources/static/register/QnQ-doc.html
@@ -163,46 +163,46 @@
         }
 
         .chats {
-          width: 100%;
-          height: 85%;
-          box-sizing: border-box;
-          margin-bottom: 2%;
-          overflow: auto;
-          border-radius: 10px;
-          background-color: white;
-        }
+            width: 100%;
+            height: 85%;
+            box-sizing: border-box;
+            margin-bottom: 2%;
+            overflow: auto;
+            border-radius: 10px;
+            background-color:rgb(211, 235, 244);
+          }
 
-        .chat-list {
-          width: 100%;
-          padding: 0;
-          margin: 0;
-          border: 10px solid white;
-          box-sizing: border-box;
-        }
+          .chat-list {
+            width: 100%;
+            padding: 0;
+            margin: 0;
+            border: 10px solid rgb(211, 235, 244);
+            box-sizing: border-box;
+          }
 
-        .chat-list li {
-          list-style: none;
-          width: 100%;
-          min-height: 120px;
-          margin-bottom: 2%;
-        }
+          .chat-list li {
+            list-style: none;
+            width: 100%;
+            min-height: 120px;
+            margin-bottom: 2%;
+          }
 
-        .chat-left {}
+          .chat-left {}
 
-         .chat-left div {
-          width: 300px;
-          float: left;
-          background-color: white;
-          border: 3px solid rgb(134, 177, 243);
-        }
-        .chat-right {}
+           .chat-left div {
+            width: 300px;
+            float: left;
+            background-color: white;
+            border: 3px solid rgb(211, 235, 244);
+          }
+          .chat-right {}
 
-        .chat-right div {
-         width: 300px;
-          float: right;
-          background-color: white;
-          border: 3px solid rgb(4, 50, 120);
-        }
+          .chat-right div {
+           width: 300px;
+		        float: right;
+		        background-color: white;
+		        border: 3px solid rgb(211, 235, 244);
+		      }
         #q-content{
           font-weight: bolder;
         }
