--- a/app/src/main/resources/static/register/QnQ.html
+++ b/app/src/main/resources/static/register/QnQ.html
@@ -151,21 +151,21 @@
          
         }
 
-          .chats {
+        .chats {
             width: 100%;
             height: 85%;
             box-sizing: border-box;
             margin-bottom: 2%;
             overflow: auto;
             border-radius: 10px;
-            background-color: white;
+            background-color:rgb(211, 235, 244);
           }
 
           .chat-list {
             width: 100%;
             padding: 0;
             margin: 0;
-            border: 10px solid white;
+            border: 10px solid rgb(211, 235, 244);
             box-sizing: border-box;
           }
 
@@ -182,7 +182,7 @@
             width: 300px;
             float: left;
             background-color: white;
-            border: 3px solid rgb(134, 177, 243);
+            border: 3px solid rgb(211, 235, 244);
           }
           .chat-right {}
 
@@ -190,7 +190,7 @@
            width: 300px;
 		        float: right;
 		        background-color: white;
-		        border: 3px solid rgb(4, 50, 120);
+		        border: 3px solid rgb(211, 235, 244);
 		      }
 		      #q-content{
 		        font-weight: bolder;
