04월 25일 작업 내용 업로드

--- a/app/src/main/resources/static/register/QnQ-doc.html
+++ b/app/src/main/resources/static/register/QnQ-doc.html
@@ -250,7 +250,7 @@
           <div class="input-group mb-3">
             <input type="text" class="form-control chat-text" placeholder="문의 사항을 입력해주세요"
               aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button class="btn btn-outline-secondary chat-btn" type="button" id="button-addon2" style="z-index:0 !important">입력</button>
+            <button class="btn btn-outline-secondary chat-btn" type="button" onkeyup="enterkey()"  id="button-addon2" style="z-index:0 !important">입력</button>
           </div>
         </div>
       </div>
