--- a/app/src/main/resources/static/register/AnA-admin.html
+++ b/app/src/main/resources/static/register/AnA-admin.html
@@ -248,7 +248,7 @@
           <div class="chat-send-cover">
             <div class="input-group mb-3">
               <input type="text" class="form-control chat-text" placeholder="답변을 입력해 주세요" aria-label="Recipient's username" aria-describedby="button-addon2">
-              <button class="btn btn-outline-secondary chat-btn" type="button" id="button-addon2" style="z-index:0 !important">입력</button>
+              <button class="btn btn-outline-secondary chat-btn" type="button" onkeyup="enterkey()" id="button-addon2" style="z-index:0 !important">입력</button>
             </div>
           </div>
         </div>
