--- a/app/src/main/resources/static/register/hospitals-map.html
+++ b/app/src/main/resources/static/register/hospitals-map.html
@@ -174,6 +174,10 @@
           });
         </script>
       </ul>
+      <img
+        src="../register/assets/img/mainlogo.png"
+        style="height: 150px; margin-top: 400px; margin-left: 40px"
+      />
     </aside>
     <!-- End Sidebar-->
 
