--- a/app/src/main/resources/static/register/doctors-records.html
+++ b/app/src/main/resources/static/register/doctors-records.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/newlogo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -144,6 +144,10 @@
         });
       </script>
     </ul>
+    <img
+        src="../register/assets/img/mainlogo.png"
+        style="height: 150px; margin-top: 400px; margin-left: 40px"
+      />
 
   </aside><!-- End Sidebar-->
   <main id="main" class="main">
@@ -277,17 +281,63 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
-    <div class="copyright">
-      &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
+    <div>
+      <div class="tooltip-container">
+        <a
+          href="https://github.com/whtmdgus"
+          data-bs-toggle="tooltip"
+          data-bs-placement="top"
+          title="조승현"
+        >
+          <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
+        </a>
+        <a
+          href="https://github.com/chaminju927"
+          data-bs-toggle="tooltip"
+          data-bs-placement="top"
+          title="차민주"
+        >
+          <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
+        </a>
+        <a
+          href="https://github.com/molang2"
+          data-bs-toggle="tooltip"
+          data-bs-placement="top"
+          title="이준영"
+        >
+          <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
+        </a>
+        <a
+          href="https://github.com/hyunwookimkim"
+          data-bs-toggle="tooltip"
+          data-bs-placement="top"
+          title="김현우"
+        >
+          <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
+        </a>
+        <a
+          href="https://github.com/omelase"
+          data-bs-toggle="tooltip"
+          data-bs-placement="top"
+          title="이예찬"
+        >
+          <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
+        </a>
+      </div>
+      <div class="footer-img-container">
+        <img src="../register/assets/img/bitcamplogo.png" />
+        <img
+          src="../register/assets/img/navercloudlogo.png"
+          style="width: 200px; margin-left: 50px"
+        />
+        <img
+          src="../register/assets/img/magicecole.png"
+          style="width: 150px; margin-left: 50px"
+        />
+      </div>
     </div>
-    <div class="credits">
-      <!-- All the links in the footer should remain intact. -->
-      <!-- You can delete the links only if you purchased the pro version. -->
-      <!-- Licensing information: https://bootstrapmade.com/license/ -->
-      <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-    </div>
-  </footer><!-- End Footer -->
+  </footer>
+  <!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
