--- a/app/src/main/resources/static/register/doctors-records.html
+++ b/app/src/main/resources/static/register/doctors-records.html
@@ -154,13 +154,7 @@
 
     <div class="pagetitle">
       <h1>나의 진료 상세 내역</h1>
-      <nav>
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item">Pages</li>
-          <li class="breadcrumb-item active">Records</li>
-        </ol>
-      </nav>
+      
     </div><!-- End Page Title -->
 
     <div class="col-xxl-12" style="width:1250px">
@@ -256,7 +250,7 @@
 
 
                     <div class="col-12">
-                      <button class="btn btn-primary sogyon-btn" type="button">진단 작성</button>
+                      <button class="btn btn-outline-secondary sogyon-btn" type="button">진단 작성</button>
                     </div>
                   </form>
 
