--- a/app/src/main/resources/static/register/patients-profile-auth.html
+++ b/app/src/main/resources/static/register/patients-profile-auth.html
@@ -197,7 +197,7 @@
                       <button
                         type="button"
                         id="check-password-btn"
-                        class="btn btn-primary"
+                        class="btn btn-outline-secondary"
                       >
                         확인
                       </button>
