--- a/app/src/main/resources/static/register/memberEditor.html
+++ b/app/src/main/resources/static/register/memberEditor.html
@@ -160,6 +160,10 @@
 
   </aside><!-- End Sidebar-->
   <main id="main" class="main">
+    <div class="pagetitle">
+      <h1>회원 관리</h1>
+    </div><!-- End Page Title -->
+
 
     <section class="section">
       <div class="row">
