탑바 및 사이드바 메뉴 하이라이트 정리

--- a/app/src/main/resources/static/register/QnQ-doc.html
+++ b/app/src/main/resources/static/register/QnQ-doc.html
@@ -76,7 +76,7 @@
       <li class="nav-heading">의사 전용 페이지</li>
 
       <li class="nav-item">
-        <a class="nav-link" href="doctors-profile.html">
+        <a class="nav-link collapsed" href="doctors-profile.html">
           <i class="bi bi-person"></i>
           <span>내 정보</span>
         </a>
@@ -91,7 +91,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="QnQ-doc.html">
+        <a class="nav-link" href="QnQ-doc.html">
           <i class="bi bi-question-circle"></i>
           <span>문의하기</span>
         </a>
