--- a/app/src/main/resources/static/register/doctors-advices.html
+++ b/app/src/main/resources/static/register/doctors-advices.html
@@ -100,7 +100,7 @@
         <li class="nav-heading">의사 전용 페이지</li>
 
         <li class="nav-item">
-          <a class="nav-link" href="doctors-profile.html">
+          <a class="nav-link collapsed" href="doctors-profile.html">
             <i class="bi bi-person"></i>
             <span>내 정보</span>
           </a>
@@ -108,7 +108,7 @@
         <!-- End Profile Page Nav -->
 
         <li class="nav-item">
-          <a class="nav-link collapsed" href="doctors-advices.html">
+          <a class="nav-link" href="doctors-advices.html">
             <i class="bi bi-file-earmark"></i>
             <span>진료하기</span>
           </a>
