--- a/app/src/main/resources/static/register/hospitals-view.html
+++ b/app/src/main/resources/static/register/hospitals-view.html
@@ -156,7 +156,7 @@
         <li class="nav-heading">의사 전용 페이지</li>
 
         <li class="nav-item">
-          <a class="nav-link" href="doctors-profile.html">
+          <a class="nav-link collapsed" href="doctors-profile.html">
             <i class="bi bi-person"></i>
             <span>내 정보</span>
           </a>
@@ -178,7 +178,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link collapsed" href="hospitals-view.html">
+          <a class="nav-link" href="hospitals-view.html">
             <i class="bi bi-card-list"></i>
             <span>내 병원 정보</span>
           </a>
