--- a/app/src/main/resources/static/register/boardEditor.html
+++ b/app/src/main/resources/static/register/boardEditor.html
@@ -299,6 +299,10 @@
       </script>
 
     </ul>
+    <img
+    src="../register/assets/img/mainlogo.png"
+    style="height: 150px; margin-top: 400px; margin-left: 40px"
+  />
 
   </aside><!-- End Sidebar-->
   <main id="main" class="main">
@@ -307,7 +311,7 @@
       <h1>작성글 관리</h1>
     </div><!-- End Page Title -->
 
-    <section class="section">
+    <section class="section" style="margin-bottom: 50px;">
       <div class="row">
         <div class="col-lg-6">
 
