--- a/app/src/main/resources/static/register/memberEditor.html
+++ b/app/src/main/resources/static/register/memberEditor.html
@@ -122,13 +122,12 @@
         </a>
       </li>
 
-      <!-- 로그아웃 태그 -->
       <li class="nav-item">
         <a class="nav-link collapsed" href="../auth/doctors-login.html" target='_blank'>
           <i class="bi bi-box-arrow-in-right"></i>
           <span>의사 사이트</span>
         </a>
-      </li><!-- End Login Page Nav -->
+      </li>
       <!-- 로그아웃 태그 -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
       <li class="nav-item logout">
@@ -163,9 +162,7 @@
     <div class="pagetitle">
       <h1>회원 관리</h1>
     </div><!-- End Page Title -->
-
-
-    <section class="section">
+    <section class="section" style="margin-bottom: 50px;">
       <div class="row">
         <div class="col-lg-6">
 
