--- a/app/src/main/resources/static/register/doctors-advices.html
+++ b/app/src/main/resources/static/register/doctors-advices.html
@@ -78,7 +78,7 @@
           ><span>커뮤니티</span></a
         >
       </div>
-      
+
       <nav class="header-nav ms-auto">
         <ul class="d-flex align-items-center">
           <li class="nav-item dropdown pe-3">
@@ -173,7 +173,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="card">
-              <div class="card-body">
+              <div class="card-body" style="padding:20px;">
 
                 <!-- <p>Add lightweight datatables to your project with using the <a href="https://github.com/fiduswriter/Simple-DataTables" target="_blank">Simple DataTables</a> library. Just add <code>.datatable</code> class name to any table you wish to conver to a datatable</p> -->
                 <form>
