--- a/app/src/main/resources/static/register/hospitals-list.html
+++ b/app/src/main/resources/static/register/hospitals-list.html
@@ -247,30 +247,30 @@
                                 margin: 0;
                             }
                           </style>
-                          <form id="hospital-list">
-                            <tbody class="table-group-divider">
-                              <div class="hospital-list-css">
-                                <tr class="hos-tr">
-                                  <td><input id="hosName" class="hos-name" type="text" /></td>
-                                  <td><input id="hosAddr" class="hos-addr" type="text" /></td>
-                                  <td><input id="hosTel" class="hos-tel" type="number" placeholder="'-' 없이 입력"
-                                     maxlength="11"
-                                      oninput="changeNo()" required /></td>
-                                    <script>
-                                      function changeNo(){
-                                        if( document.querySelector(".hos-tel").value.length > document.querySelector(".hos-tel").maxLength) {
-                                          document.querySelector(".hos-tel").value = document.querySelector(".hos-tel").value.substring(0,11);
-                                        }
+                        <form id="hospital-list">
+                          <tbody class="table-group-divider">
+                            <div class="hospital-list-css">
+                              <tr>
+                                <td><input id="hosName" class="hos-name" type="text" placeholder='병원이름' /></td>
+                                <td><input id="hosAddr" class="hos-addr" type="text" placeholder='주소'/></td>
+                                <td><input id="hosTel" class="hos-tel" type="number" placeholder="'-' 없이 입력"
+                                   maxlength="11"
+                                    oninput="changeNo()" required /></td>
+                                  <script>
+                                    function changeNo(){
+                                      if( document.querySelector(".hos-tel").value.length > document.querySelector(".hos-tel").maxLength) {
+                                        document.querySelector(".hos-tel").value = document.querySelector(".hos-tel").value.substring(0,11);
                                       }
-                                    </script>
-                                  <td><input id="hosTime" class="hos-time" type="text"
-                                      placeholder="예:월~금 08시~18시30분,토 휴진" /></td>
-                                  <td><input id="hosSub" class="hos-sub" type="text" placeholder="예: 가정의학과,소아과" /></td>
-                                  <td><input id="hosPwd" class="hos-pwd" type="password"/></td>
-                                  <form>
-                                    <td><input type="file" id="hosPhoto" class="hos-photo hospital-files"
-                                        style="width: 220px;" accept="image/*" multiple required></td>
-                                  </form>
+                                    }
+                                  </script>
+                                <td><input id="hosTime" class="hos-time" type="text"
+                                    placeholder="예:월~금 08시~18시30분,토 휴진" /></td>
+                                <td><input id="hosSub" class="hos-sub" type="text" placeholder="예: 가정의학과,소아과" /></td>
+                                <td><input id="hosPwd" class="hos-pwd" type="password" placeholder="비밀번호를 4자이상 입력"/></td>                      
+                                <form>
+                                  <td><input type="file" id="hosPhoto" class="hos-photo hospital-files"
+                                      style="width: 220px;" accept="image/*" multiple></td>
+                                </form>
                                 </tr>
                               </div>
                             </tbody>
@@ -506,6 +506,18 @@
 
 
     document.querySelector('#btn-submit').onclick = (e) => {
+      const hosNameInput = document.querySelector('#hosName');
+      const pwdInput = document.querySelector('#hosPwd');
+
+       if(hosNameInput.value == ""){
+        alert('병원명을 입력해주세요.');
+        return false;
+      }
+
+      if(pwdInput.value == "" || pwdInput.value.length < 4){
+        alert('비밀번호를 4자 이상 입력해주세요.');
+        return false;
+      }
       if (hosTel.value === '' || hosTel.value.length < 7) {
         return false;
       }
