doctors-advices 검색 UI 디자인 변경

--- a/app/src/main/resources/static/register/doctors-advices.html
+++ b/app/src/main/resources/static/register/doctors-advices.html
@@ -180,10 +180,10 @@
                   <input
                     type="text"
                     name="keyword"
-                    class="search-filter"
+                    class="search-filter form-control"
                     placeholder="입력하기"
                   />
-                  <button type="button" class="search-btn">검색</button>
+                  <button type="button" class="search-btn btn btn-outline-secondary">검색</button>
                 </form>
                 <!-- Table with stripped rows -->
                 <table class="table">
@@ -192,7 +192,7 @@
                       <!-- table 작업시에 <th><td> 갯수가 서로 일치하지 않으면 정렬 버튼 사라집니다 -->
                       <th scope="col">답변</th>
                       <th scope="col">번호</th>
-                      <th scope="col" clas="cursor">제목</th>
+                      <th scope="col" class="cursor">제목</th>
                       <th scope="col">위급정도</th>
                       <th scope="col">작성자</th>
                       <th scope="col">작성일</th>
