04월 25일 작업 내용 업로드

--- a/app/src/main/resources/static/register/QnQ-doc.html
+++ b/app/src/main/resources/static/register/QnQ-doc.html
@@ -241,6 +241,7 @@
         .chats li div span {
           display: inline-block;
           box-sizing: border-box;
+          white-space: normal;
         }
 
         .chat-send-cover {
