--- a/app/src/main/resources/static/register/QnQ.html
+++ b/app/src/main/resources/static/register/QnQ.html
@@ -219,6 +219,7 @@
           .chats li div span {
             display: inline-block;
             box-sizing: border-box;
+            white-space: normal;
           }
 
           .chat-send-cover {
