--- a/app/src/main/resources/static/register/QnQ-doc.html
+++ b/app/src/main/resources/static/register/QnQ-doc.html
@@ -242,6 +242,8 @@
           display: inline-block;
           box-sizing: border-box;
           white-space: normal;
+          word-wrap:break-word;
+          word-break:break-all;
         }
 
         .chat-send-cover {
