--- a/app/src/main/resources/static/register/QnQ.html
+++ b/app/src/main/resources/static/register/QnQ.html
@@ -220,6 +220,8 @@
             display: inline-block;
             box-sizing: border-box;
             white-space: normal;
+            word-wrap:break-word;
+            word-break:break-all;
           }
 
           .chat-send-cover {
