doctors-advices, hospital-input 검색 UI 변경

--- a/app/src/main/resources/static/register/hospitals-input.html
+++ b/app/src/main/resources/static/register/hospitals-input.html
@@ -66,15 +66,14 @@
 
   <body>
     <h3 class="text-center">내 병원 등록</h3>
-    <span >
     <button type="button" id="0, " class="btn btn-secondary col-sm-2" onclick="setParentText(event)">등록 취소</button>
-  </span>
     <div style="float: right">
       <input
-        type="text"
-        id="search-input"
-        placeholder="병원명,주소,진료과목🔍"
-      />
+      type="text"
+      id="search-input"
+      class="form-control search-filter"
+      placeholder="검색"
+    />
     </div>
     <table id="foo-table" class="table table-hover">
       <thead>
