--- a/app/src/main/resources/static/register/doctors-advices.html
+++ b/app/src/main/resources/static/register/doctors-advices.html
@@ -177,13 +177,24 @@
 
                 <!-- <p>Add lightweight datatables to your project with using the <a href="https://github.com/fiduswriter/Simple-DataTables" target="_blank">Simple DataTables</a> library. Just add <code>.datatable</code> class name to any table you wish to conver to a datatable</p> -->
                 <form>
-                  <input
-                    type="text"
-                    name="keyword"
-                    class="search-filter form-control"
-                    placeholder="입력하기"
-                  />
-                  <button type="button" class="search-btn btn btn-outline-secondary">검색</button>
+                  <div class="row">
+                    <div class="col-4">
+                      <div class="input-group mb-3">
+                        <input
+                          type="text"
+                          name="keyword"
+                          class="form-control search-filter"
+                          placeholder="검색하기"
+                        />
+                        <button
+                          class="btn btn-outline-secondary search-btn"
+                          type="button"
+                        >
+                          검색
+                        </button>
+                      </div>
+                    </div>
+                  </div>
                 </form>
                 <!-- Table with stripped rows -->
                 <table class="table">
