--- a/app/src/main/resources/static/register/QnQ.html
+++ b/app/src/main/resources/static/register/QnQ.html
@@ -189,8 +189,8 @@
           .chat-right div {
            width: 300px;
 		        float: right;
-		        background-color: white;
-		        border: 3px solid rgb(211, 235, 244);
+		        background-color: rgb(255, 229, 135);
+		        border: 3px solid  rgb(255, 229, 135);
 		      }
 		      #q-content{
 		        font-weight: bolder;
