--- a/app/src/main/resources/static/register/boardEditor.html
+++ b/app/src/main/resources/static/register/boardEditor.html
@@ -41,7 +41,7 @@
   ======================================================== -->
   <style>
     .top-content {
-      margin-top: 3%;
+      margin-top: 0;
       display: inline-block;
       width: 97%;
       height: 20%;
