업데이트 창 다음주소검색 기능  api 추가

--- a/app/src/main/resources/static/register/hospitals-view.html
+++ b/app/src/main/resources/static/register/hospitals-view.html
@@ -112,6 +112,9 @@
         width: 252px;
         height: 40px;
       }
+      .addr-button {
+        background-color: #e9ecef;
+      }
     </style>
   </head>
 
@@ -428,6 +431,14 @@
                           </div>
                           <div class="form-floating mb-3 col-sm-6">
                             <input
+                              type="button"
+                              class="addr-button form-control"
+                              onclick="sample6_execDaumPostcode()"
+                              value="주소찾기"
+                            />
+                          </div>
+                          <div class="form-floating mb-3 col-sm-6">
+                            <input
                               type="text"
                               class="form-control"
                               id="update-hosAddr"
@@ -435,6 +446,32 @@
                             />
                             <label for="floatingInput-a">주소</label>
                           </div>
+                          <div class="form-floating mb-3 col-sm-6">
+                            <input
+                              type="text"
+                              class="form-control"
+                              id="update-dhosAddr"
+                              placeholder="상세주소"
+                            />
+                            <label for="floatingInput-a">상세주소</label>
+                          </div>
+
+                          <input
+                            type="text"
+                            class="form-control"
+                            id="sample6_extraAddress"
+                            placeholder="참고주소"
+                            hidden
+                          />
+
+                          <input
+                            type="text"
+                            class="form-control"
+                            id="sample6_postcode"
+                            placeholder="우편번호"
+                            hidden
+                          />
+
                           <div class="form-floating mb-3 col-sm-6">
                             <input
                               type="text"
@@ -812,8 +849,59 @@
       const uformData = new FormData(uform);
       let uno = new URL(location.href).searchParams.get("no");
 
-      // 폼 유효성 검사 및 요청
+      function sample6_execDaumPostcode() {
+        new daum.Postcode({
+          oncomplete: function (data) {
+            // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
 
+            // 각 주소의 노출 규칙에 따라 주소를 조합한다.
+            // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+            var addr = ""; // 주소 변수
+            var extraAddr = ""; // 참고항목 변수
+
+            //사용자가 선택한 주소 타입에 따라 해당 주소 값을 가져온다.
+            if (data.userSelectedType === "R") {
+              // 사용자가 도로명 주소를 선택했을 경우
+              addr = data.roadAddress;
+            } else {
+              // 사용자가 지번 주소를 선택했을 경우(J)
+              addr = data.jibunAddress;
+            }
+
+            // 사용자가 선택한 주소가 도로명 타입일때 참고항목을 조합한다.
+            if (data.userSelectedType === "R") {
+              // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+              // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+              if (data.bname !== "" && /[동|로|가]$/g.test(data.bname)) {
+                extraAddr += data.bname;
+              }
+              // 건물명이 있고, 공동주택일 경우 추가한다.
+              if (data.buildingName !== "" && data.apartment === "Y") {
+                extraAddr +=
+                  extraAddr !== ""
+                    ? ", " + data.buildingName
+                    : data.buildingName;
+              }
+              // 표시할 참고항목이 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
+              if (extraAddr !== "") {
+                extraAddr = " (" + extraAddr + ")";
+              }
+              // 조합된 참고항목을 해당 필드에 넣는다.
+              document.getElementById("sample6_extraAddress").value = extraAddr;
+            } else {
+              document.getElementById("sample6_extraAddress").value = "";
+            }
+
+            // 우편번호와 주소 정보를 해당 필드에 넣는다.
+            document.getElementById("sample6_postcode").value = data.zonecode;
+            document.getElementById("update-hosAddr").value = addr;
+            // 커서를 상세주소 필드로 이동한다.
+            document.getElementById("update-dhosAddr").focus();
+          },
+        }).open();
+      }
+
+      // 폼 유효성 검사 및 요청
       setTimeout(() => {
         if (uform.checkValidity()) {
           let json = JSON.stringify(Object.fromEntries(uformData));
@@ -828,15 +916,19 @@
                   hospital.hospitalNo;
                 document.getElementById("update-hosName").value =
                   hospital.hosName;
-                document.getElementById("update-hosAddr").value =
-                  hospital.hosAddr;
+                const addrArray = hospital.hosAddr
+                  ? hospital.hosAddr.split(",")
+                  : ["", ""];
+                const baddr = addrArray[0];
+                const daddr = addrArray[1] || "";
+                document.getElementById("update-hosAddr").value = baddr;
+                document.getElementById("update-dhosAddr").value = daddr;
                 document.getElementById("update-hosTel").value =
                   hospital.hosTel;
                 document.getElementById("update-hosTime").value =
                   hospital.hosTime;
                 document.getElementById("update-hosSub").value =
                   hospital.hosSub;
-                // document.getElementById("update-hosPwd").value = hospital.hosPwd;
 
                 //리스트숫자증가
                 const hosPhotoNoDiv = document.getElementById("hos-phoNo");
@@ -992,6 +1084,10 @@
       });
 
       document.querySelector("#hos-update-submit").onclick = (e) => {
+        let dbaddr = "";
+        let baddr = document.getElementById("update-hosAddr").value;
+        let daddr = document.getElementById("update-dhosAddr").value;
+        dbaddr = baddr + "," + daddr;
         document.getElementById("hos-update-submit").style.display = "none";
         let kno = new URL(location.href).searchParams.get("no");
         fetch(`http://175.106.99.31/hospital/${kno}`, {
