4일 28일 작업내용 업로드

--- a/app/src/main/resources/static/register/tel-input.html
+++ b/app/src/main/resources/static/register/tel-input.html
@@ -151,14 +151,14 @@
           console.log(data)
           if (data.status == "success") {
             
-            alert("인증 되었습니다.")
+            // alert("인증 되었습니다.")
             setParentText()
           } else {
             if(data.data == "중복된 연락처") {
               alert("중복된 연락처 입니다.")
               exit()
             }else {
-              alert("틀린 인증번호.")
+              $(".serial-btn").text("틀린 인증번호");
             }
           }
         })
