4일 28일 작업내용 업로드

--- a/app/src/main/resources/static/register/patients-profile.html
+++ b/app/src/main/resources/static/register/patients-profile.html
@@ -343,13 +343,37 @@
                         </div>
                         <button
                           type="button"
-                          onclick="tel()"
+                          onclick="calltel()"
                           class="btn btn-secondary col-md-2"
                           style="height: 90%"
                         >
                           변경 / 인증
                         </button>
                       </div>
+
+                      <script>
+                        var popupWidth = 470;
+                        var popupHeight = 450;
+
+                        var popupX = window.screen.width / 2 - popupWidth / 2;
+
+                        var popupY = window.screen.height / 2 - popupHeight / 2;
+
+                        function calltel() {
+                          window.open(
+                            'tel-input.html',
+                            'popupNo1',
+                            'status=no, height=' +
+                              popupHeight +
+                              ', width=' +
+                              popupWidth +
+                              ', left=' +
+                              popupX +
+                              ', top=' +
+                              popupY
+                          );
+                        }
+                      </script>
 
                       <div class="row mb-3">
                         <label
@@ -393,14 +417,6 @@
                             readonly
                           />
                         </div>
-                        <button
-                          type="button"
-                          onclick="tel()"
-                          class="btn btn-secondary col-md-2"
-                          style="height: 90%"
-                        >
-                          변경 / 인증
-                        </button>
                       </div>
 
                       <div class="row mb-3">
