4일 28일 작업내용 업로드

--- a/app/src/main/resources/static/register/doctors-records.html
+++ b/app/src/main/resources/static/register/doctors-records.html
@@ -198,24 +198,24 @@
                 <form class="row gx-3">
                   <div class="col-md-3">
                     <label for="validationDefault01" class="form-label">이름</label>
-                    <input type="text" class="form-control board-name" id="validationDefault01" value="엄진영" readonly>
+                    <input type="text" class="form-control board-name" id="validationDefault01" value="" readonly>
                   </div>
                   <div class="col-md-1">
                     <label for="validationDefault02" class="form-label">성별</label>
                     <input class="form-control board-gender" id="validationDefault02"
-                      style="padding: 0px; line-height: 38px; text-align: center; height: 38px;" value="여" readonly>
+                      style="padding: 0px; line-height: 38px; text-align: center; height: 38px;" value="" readonly>
                   </div>
                   <div class="col-md-2">
                     <label for="validationDefault01" class="form-label">나이</label>
-                    <input type="text" class="form-control board-age" id="validationDefault01" value="21" readonly>
+                    <input type="text" class="form-control board-age" id="validationDefault01" value="" readonly>
                   </div>
                   <div class="col-md-3">
                     <label for="validationDefault01" class="form-label">지역</label>
-                    <input type="text" class="form-control board-addr" id="validationDefault01" value="경기도" readonly>
+                    <input type="text" class="form-control board-addr" id="validationDefault01" value="" readonly>
                   </div>
                   <div class="col-md-3">
                     <label for="validationDefault01" class="form-label">연락처</label>
-                    <input type="text" class="form-control board-tel" id="validationDefault01" value="010-010-010"
+                    <input type="text" class="form-control board-tel" id="validationDefault01" value=""
                       readonly>
                   </div>
 
