--- a/app/src/main/resources/static/register/patients-records.html
+++ b/app/src/main/resources/static/register/patients-records.html
@@ -85,7 +85,7 @@
         <li class="nav-heading">환자 페이지</li>
 
         <li class="nav-item">
-          <a class="nav-link" href="patients-profile.html">
+          <a class="nav-link collapsed" href="patients-profile.html">
             <i class="bi bi-person"></i>
             <span>내 정보</span>
           </a>
@@ -93,7 +93,7 @@
         <!-- End Profile Page Nav -->
 
         <li class="nav-item">
-          <a class="nav-link collapsed" href="patients-records.html">
+          <a class="nav-link" href="patients-records.html">
             <i class="bi bi-file-earmark"></i>
             <span>작성글 목록</span>
           </a>
