오류수정 완료

--- a/app/src/main/resources/static/register/hospitals-view.html
+++ b/app/src/main/resources/static/register/hospitals-view.html
@@ -1087,9 +1087,9 @@
       });
 
       document.querySelector("#hos-update-submit").onclick = (e) => {
-        const dbaddr = "";
-        const baddr = document.getElementById("update-hosAddr").value + ",";
-        const daddr = document.getElementById("update-dhosAddr").value;
+        let dbaddr = "";
+        let baddr = document.getElementById("update-hosAddr").value + ",";
+        let daddr = document.getElementById("update-dhosAddr").value;
         dbaddr = baddr + daddr;
         document.getElementById("hos-update-submit").style.display = "none";
         let kno = new URL(location.href).searchParams.get("no");
@@ -1101,7 +1101,7 @@
           body: JSON.stringify({
             hospitalNo: kno,
             hosName: document.querySelector("#update-hosName").value,
-            hosAddr: document.querySelector("#update-hosAddr").value,
+            hosAddr: dbaddr,
             hosTel: document.querySelector("#update-hosTel").value,
             hosTime: document.querySelector("#update-hosTime").value,
             hosSub: document.querySelector("#update-hosSub").value,
