--- a/app/src/main/resources/static/register/memberEditor.html
+++ b/app/src/main/resources/static/register/memberEditor.html
@@ -78,7 +78,7 @@
           class="nav-link nav-profile d-flex align-items-center pe-0"
           
         >
-          <div id="pre-userimg"></div>
+        <img src="../assets/img/관리자이미지.png" alt="Profile" class="rounded-circle">
           <span id="username" class="d-none d-md-block ps-2"></span>
         </a>
       </li>
