관리자페이지 프사 및 이름영역 수정

--- a/app/src/main/resources/static/register/AnA-list.html
+++ b/app/src/main/resources/static/register/AnA-list.html
@@ -61,7 +61,11 @@
               class="nav-link nav-profile d-flex align-items-center pe-0"
               href="patients-profile.html"
             >
-              <div id="pre-userimg"></div>
+              <img
+                src="../assets/img/관리자이미지.png"
+                alt="Profile"
+                class="rounded-circle"
+              />
               <span id="username" class="d-none d-md-block ps-2"></span>
             </a>
           </li>
@@ -169,14 +173,12 @@
               /* 파이어폭스 */
             }
 
-           
-        .chat-cover {
-          width: 780px;
-          height: 750px;
-          box-sizing: border-box;
-          margin: 100px auto;
-         
-        }
+            .chat-cover {
+              width: 780px;
+              height: 750px;
+              box-sizing: border-box;
+              margin: 100px auto;
+            }
 
             .chats {
               width: 100%;
@@ -215,12 +217,12 @@
             }
 
             #list-name {
-              margin-right:30px !important;
+              margin-right: 30px !important;
               font-weight: bolder;
             }
           </style>
 
-          <div class="chat-cover" style="margin-top: 10px !important;">
+          <div class="chat-cover" style="margin-top: 10px !important">
             <div class="chats scroll">
               <ul class="chat-list list-group"></ul>
             </div>
