--- a/app/src/main/resources/static/register/hospitals-view.html
+++ b/app/src/main/resources/static/register/hospitals-view.html
@@ -352,7 +352,7 @@
                   <button
                     type="button"
                     id="update-button"
-                    class="btn btn-secondary"
+                    class="btn btn-outline-success"
                     style="
                       background-color: #77dd77;
                       color: #ffffff;
@@ -537,7 +537,7 @@
                             <div class="sm-10">
                               <button
                                 type="button"
-                                class="btn btn-secondary mr-auto"
+                                class="btn btn-outline-dark mr-auto"
                                 onclick="location.reload()"
                                 data-bs-dismiss="modal"
                               >
@@ -546,14 +546,7 @@
                               <button
                                 type="button"
                                 id="hos-update-submit"
-                                class="btn bbtn-secondary"
-                                style="
-                                  background-color: #77dd77;
-                                  color: #ffffff;
-                                  border: none;
-                                  height: 40px;
-                                  border-radius: 5px 5px 5px 5px;
-                                "
+                                class="btn btn-outline-success"
                               >
                                 병원정보변경
                               </button>
@@ -641,7 +634,7 @@
                       <div class="modal-footer">
                         <button
                           type="button"
-                          class="btn btn-secondary"
+                          class="btn btn-outline-dark"
                           data-bs-dismiss="modal"
                         >
                           Close
