--- a/app/src/main/resources/static/register/hospitals-list.html
+++ b/app/src/main/resources/static/register/hospitals-list.html
@@ -193,8 +193,6 @@
                   <strong style="margin-left: 710px;">병원정보검색</strong>
                   <input type="text" id="search-input" placeholder="병원명,주소,진료과목         🔍">
                 </h4>
-                <!-- <p>Add lightweight datatables to your project with using the <a href="https://github.com/fiduswriter/Simple-DataTables" target="_blank">Simple DataTables</a> library. Just add <code>.datatable</code> class name to any table you wish to conver to a datatable</p> -->
-
                 <!-- Table with stripped rows -->
                 <table id="foo-table" class="table table-hover">
                   <thead>
@@ -281,10 +279,9 @@
                       </div>
                       <div class="modal-footer justify-content-between">
 
-                        <button type="button" class="btn btn-secondary mr-auto" onclick="location.reload()"
+                        <button type="button" class="btn btn btn-outline-dark mr-auto" onclick="location.reload()"
                           data-bs-dismiss="modal">Close</button>
-                        <button type="button" id="btn-submit" class=" btn btn-secondary"
-                          style="background-color: #77DD77; color: #FFFFFF; border: none; height:40px; border-radius: 5px 5px 5px 5px;">병원추가</button>
+                        <button type="button" id="btn-submit" class=" btn btn-outline-success" >병원추가</button>
                       </div>
                     </div>
                   </div>
